# pyocd-debug-mcp

./: README.md  pyproject.toml
.claude/skills/hc32f4a0-manual/: 00-index.md  SKILL.md  chapter-template.md
.claude/skills/hc32f4a0-manual/chapters/: 01-memory-map.md  02-rmu.md  03-cmu.md  04-pwc.md  05-icg.md  06-efm.md  07-sram.md  08-gpio.md  09-intc.md  10-aos.md  11-mpu.md  12-keyscan.md  13-ctc.md  14-dma.md  15-cmp.md  16-adc.md  17-dac.md  18-ots.md  19-timer6.md  20-hrpwm.md  21-timer4.md  22-emb.md  23-timera.md  24-timer2.md  25-timer0.md  26-rtc.md  27-swdt.md  28-usart.md  29-i2c.md  30-spi.md  31-qspi.md  32-i2s.md  33-usbhs.md  34-usbfs.md  35-canfd.md  36-can2b.md  37-sdioc.md  38-ethmac.md  39-exmc.md  40-dvp.md  (+9 more)
openspec/changes/fill-competitive-gaps/: design.md  proposal.md  tasks.md
openspec/changes/fill-competitive-gaps/specs/breakpoint-management/: spec.md
openspec/changes/fill-competitive-gaps/specs/flash-programming/: spec.md
openspec/changes/fill-competitive-gaps/specs/flash-verify/: spec.md
openspec/changes/fill-competitive-gaps/specs/rtt-support/: spec.md
openspec/changes/fill-competitive-gaps/specs/session-lifecycle/: spec.md
openspec/changes/fill-competitive-gaps/specs/svd-enhanced/: spec.md
src/pyocd_debug_mcp/: __init__.py  server.py  session_manager.py
src/pyocd_debug_mcp/tools/: breakpoint.py  debug.py  elf.py  flash.py  memory.py  probe.py  project.py  register.py  rtt.py  svd.py  target.py  unwinder.py  watchpoint.py
